fixed featured on ios

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -350,7 +350,7 @@ Homepage
 .featured {
 	display: block;
 	width: 100%;
-	height: 380px;
+	min-height: 380px;
 	margin: 0 auto 0;
 	/* Display background while image loads */
 	background-color: #303030;
@@ -360,6 +360,8 @@ Homepage
 	}
 	.featured:hover .featured > div > div {}
 	.featured img {
+		min-height: 385px;
+		min-width: 700px;
 		-webkit-transition-property: none;
 		   -moz-transition-property: none;
 		     -o-transition-property: none;
@@ -516,6 +518,7 @@ h3 {
 		color: white;
 		padding: 0 4px;
 		line-height: 14px;
+		z-index: 1;
 		}
 	.work div.new h4:after {
 		content: "New";
@@ -530,6 +533,7 @@ h3 {
 		color: white;
 		padding: 0 4px;
 		line-height: 14px;
+		z-index: 1;
 		}
 
 	.work div img,
